--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/Pawar-Pratik/React-Calculator",
   "name": "Calculator",
+  "homepage": "https://Pawar-Pratik.github.io/React-Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
